# gfsmxl

./: .cvsignore  AUTHORS  Cascade.xs  Changes  GfsmXLPerl.c  GfsmXLPerl.h  Lookup.xs  MANIFEST  MANIFEST.SKIP  Makefile.PL  Makefile.am  README.html  README.pod  README.txt  XL.pm  XL.xs  autogen.sh  autoreconf.sh  configure.ac  csc0.tfst  csc0b.tfst  csc2.tfst  distcheck.sh  gfsm-all-final.perl  gfsm-indexed-dump.perl  gfsmxl.pc.in  testme.perl  typemap  www
XL/: Cascade.pm
XL/Cascade/: Lookup.pm
config/: .cvsignore
doc/: Makefile.am
doc/libgfsmxl/: .cvsignore  Makefile.am  libgfsmxl-header.html  libgfsmxl.doxy.in  mainpage.dox.in
doc/programs/: Makefile.am  gfsmxl_cascade_compile.pod  gfsmxl_cascade_nbest_lookup.pod  gfsmxl_cascade_nbest_strings.pod  gfsmxl_cascade_nth.pod
perl/: Cascade.xs  Changes  GfsmPerl.h  GfsmXLPerl.c  GfsmXLPerl.h  Lookup.xs  MANIFEST  Makefile.PL  XL.pm  XL.xs  svntag.rc  testme.perl  typemap
perl/XL/: Cascade.pm
perl/XL/Cascade/: Lookup.pm
src/: Makefile.am
src/libgfsmxl/: .cvsignore  Makefile.am  config.h  gfsmxl.h  gfsmxlCLCFib.c  gfsmxlCLCFib.h  gfsmxlCLCFibPriv.h  gfsmxlCascade.c  gfsmxlCascade.h  gfsmxlCascade.hi  gfsmxlCascadeLookup.c  gfsmxlCascadeLookup.h  gfsmxlCascadeLookup.hi  gfsmxlConfig.h  gfsmxlConfigAuto.h.in  gfsmxlConfigNoAuto.h  gfsmxlLabelIndex.c  gfsmxlLabelIndex.h  gfsmxlLabelIndex.hi  gfsmxlSuffixIndex.c  gfsmxlSuffixIndex.h  gfsmxlSuffixIndex.hi
src/libgfsmxl/tests/: .cvsignore  Makefile  astar+bstar.tfst  gfsmxl-cascade-dlookup.c  gfsmxl-cascade-get-arcs.c  gfsmxl-cascade-nbest-many.c  gfsmxl-cascade-nbest.c  gfsmxl-cascade-set-nth.c  gfsmxl-cascade-switch.c  gfsmxl-make-cascade.c  gototest.c  hacks  maxbug.txt  notes.txt  x.lab  xin1.tfst  xin2.tfst
src/programs/: .cvsignore  Makefile.am  config.h  counter.tfst  countme.t  gfsmxl_cascade_compile.gog  gfsmxl_cascade_compile_cmdparser.c  gfsmxl_cascade_compile_cmdparser.h  gfsmxl_cascade_compile_main.c  gfsmxl_cascade_nbest_lookup.gog  gfsmxl_cascade_nbest_lookup_cmdparser.c  gfsmxl_cascade_nbest_lookup_cmdparser.h  gfsmxl_cascade_nbest_lookup_main.c  gfsmxl_cascade_nbest_strings.gog  gfsmxl_cascade_nbest_strings_cmdparser.c  gfsmxl_cascade_nbest_strings_cmdparser.h  gfsmxl_cascade_nbest_strings_main.c  gfsmxl_cascade_nth.gog  gfsmxl_cascade_nth_cmdparser.c  gfsmxl_cascade_nth_cmdparser.h  gfsmxl_cascade_nth_main.c  gfsmxl_defines.c  gfsmxl_defines.perl  test.lab  test.t
src/programs/hacks/: .cvsignore  Makefile  edit+zeitF.notes  edit+zeitF.t  gmon.out.backptr.gprof  gmon.out.no-backptr.gprof  gmon.out.p3.gprof  gmon.out.p4.gprof  grimm3-nopmorph-1k.t  negra-1k.t
t/: 01_ini.t
